Changes to support GAE